deploy: f9ad8a1dd8907a405b2df322c4b07e5193633d82

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Modified Title</title><script>alert("Injected Script!");</script>
+  <title>Insecure CI Demo — Live Site</title>
   <link rel="stylesheet" href="./styles.css" />
 </head>
 <body>
